# cloud_lab_practicum_task-1

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md
.github/classroom/: autograding.json
.github/workflows/: classroom.yml
include/cloudlab/: flags.hh  kvs.hh  spmc.hh
include/cloudlab/handler/: api.hh  handler.hh  p2p.hh
include/cloudlab/network/: address.hh  connection.hh  routing.hh  server.hh
lib/: kvs.cc
lib/handler/: api.cc  p2p.cc
lib/message/: cloud.proto
lib/network/: address.cc  connection.cc  server.cc
src/: argh.hh  ctl.cc  kvs.cc  my_client.cc  verifier.cc
test/process_tests/: socketsupport.py  test_multi.py  test_single.py  testsupport.py
test/unit_tests/: task1.cc
